<resources>
    <string name="app_name">ContentProvider</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
</resources>